Bug 327221 - Crashes when two windows about certificate appears
Summary: Crashes when two windows about certificate appears
Status: RESOLVED FIXED
Alias: None
Product: kdesvn
Classification: Applications
Component: General (other bugs)
Version First Reported In: 1.6.0
Platform: Debian unstable Linux
: NOR crash
Target Milestone: ---
Assignee: KDESvn default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-06 11:56 UTC by Kakadu.hafanana
Modified: 2018-10-31 15:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kakadu.hafanana 2013-11-06 11:56:50 UTC
My svn repo has some certificate and kdesvn often ask me if  I should accept it. If it shows a dialog about it and I wait the 2nd same dialog appears. And If I click some button in 2nd dialog ---  kdesvn crashes.

Reproducable: always

Reproducible: Always

Steps to Reproduce:
1. Found a repo with certificates
2. Wait 1st certificate acception dialog
3. Wait 2nd one
4. click any button in 2nd one
Actual Results:  
crash

Expected Results:  
no crash

I have gdb output

Program received signal SIGSEGV, Segmentation fault.
0x00007ffff7a88257 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#0  0x00007ffff7a88257 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#1  0x00007fffe6720a22 in CContextListener::waitShow (this=this@entry=0xc54b70, _t1=_t1@entry=false)
    at /media/disk/kakadu/prog/kde/kdesvn-1.6.0/Build/Debug/src/svnfrontend/ccontextlistener.moc:127
#2  0x00007fffe672137d in CContextListener::contextSslServerTrustPrompt (this=this@entry=0xc54b70, 
    data=..., acceptedFailures=@0x7fffffffd5ac: 8)
    at /media/disk/kakadu/prog/kde/kdesvn-1.6.0/src/svnfrontend/ccontextlistener.cpp:272
#3  0x00007fffe676617b in ThreadContextListener::event_contextSslServerTrustPrompt (this=0xc54b70, 
    data=0x7fffdf2560a0)
    at /media/disk/kakadu/prog/kde/kdesvn-1.6.0/src/svnfrontend/background/tcontextlistener.cpp:287
#4  0x00007ffff7a8c90d in QObject::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#5  0x00007ffff6e1475c in QApplicationPrivate::notify_helper(QObject*, QEvent*) ()
   from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#6  0x00007ffff6e1add0 in QApplication::notify(QObject*, QEvent*) ()
   from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#7  0x00007ffff634acfa in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#8  0x00007ffff7a7433d in QCoreApplication::notifyInternal(QObject*, QEvent*) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#9  0x00007ffff7a7789f in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#10 0x00007ffff7aa1bf3 in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#11 0x00007ffff32edea6 in g_main_dispatch (context=0x6510b0)
    at /tmp/buildd/glib2.0-2.36.4/./glib/gmain.c:3054
#12 g_main_context_dispatch (context=context@entry=0x6510b0)
    at /tmp/buildd/glib2.0-2.36.4/./glib/gmain.c:3630
#13 0x00007ffff32ee1f8 in g_main_context_iterate (context=context@entry=0x6510b0, 
    block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>)
    at /tmp/buildd/glib2.0-2.36.4/./glib/gmain.c:3701
#14 0x00007ffff32ee29c in g_main_context_iteration (context=0x6510b0, may_block=1)
    at /tmp/buildd/glib2.0-2.36.4/./glib/gmain.c:3762
#15 0x00007ffff7aa14b5 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>)
    () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#16 0x00007ffff6eb2896 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#17 0x00007ffff7a72f9f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#18 0x00007ffff7a73295 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#19 0x00007ffff7a788db in QCoreApplication::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#20 0x000000000040a5cf in main (argc=<optimized out>, argv=<optimized out>)
    at /media/disk/kakadu/prog/kde/kdesvn-1.6.0/src/main.cpp:91
(gdb)
Comment 1 Andrew Crouthamel 2018-10-31 03:55:00 UTC
Dear Bug Submitter,

This bug has been stagnant for a long time. Could you help us out and re-test if the bug is valid in the latest version? I am setting the status to NEEDSINFO pending your response, please change the Status back to REPORTED when you respond.

Thank you for helping us make KDE software even better for everyone!
Comment 2 Kakadu.hafanana 2018-10-31 13:39:50 UTC
I tried to reproduce this using url `https://expired.badssl.com/` instead of real SVN repo and it seems that the second dialog doesn't appear. It could be difficult to reproduce this kind of issue these days because SVN appears more rarely and SSL stuff has become better.
 
It seems that issue is not reproducable as it is described but the dialog about accepting certificate after using URL above doesn't work properly: the dialog doesn't respond on three main buttons at the bottom, only window close button allows to close this dialog.
Comment 3 Andrew Crouthamel 2018-10-31 14:43:18 UTC
Thanks for the update!
Comment 4 Christian Ehrlicher 2018-10-31 15:18:57 UTC
Git commit 604bc864a6490249b7ed95ee4cf2f1d560dcf73a by Christian Ehrlicher.
Committed on 31/10/2018 at 15:18.
Pushed by chehrlic into branch 'master'.

Make buttons in sslprompt actually work, use correct cursor when showing
this dialog.

M  +3    -3    src/ksvnwidgets/ssltrustprompt.cpp
M  +3    -0    src/svnfrontend/ccontextlistener.cpp

https://commits.kde.org/kdesvn/604bc864a6490249b7ed95ee4cf2f1d560dcf73a