Make buttons in sslprompt actually work, use correct cursor when showing this dialog.

BUG: 327221